# gim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
modules/core/: CMakeLists.txt  main.cpp
modules/core/include/: key.h  mainwindow.h
modules/core/src/: mainwindow.cpp
samples/: CMakeLists.txt
samples/keypress/: CMakeLists.txt  main.cpp
samples/keypress/include/: keypress.h
samples/keypress/src/: keypress.cpp
samples/shortcuts/include/: mainwindow.h
samples/shortcuts/src/: mainwindow.cpp
samples/shortcuts/ui/: mainwindow.ui
samples/transparent/: CMakeLists.txt  main.cpp
samples/transparent/include/: QtFullscreenOverlayWidget.h
samples/transparent/src/: QtFullscreenOverlayWidget.cpp
